fix scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,22 @@ html::-webkit-scrollbar-thumb {
 body {
   background: #111;
   overflow-x: hidden;
+  height:100vh;
+  
+}
+/* Tạo một thanh cuộn màu xanh lá cây */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #29D9D5;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
 }
 body.active {
   background: #eee;
